--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -13,7 +13,7 @@
         <img src="./assets/logo_mrcoffee.png" alt="dark coffee logo" />
       </div>
 
-      <div class="welcome-note"><h1>Welcome to our schedule website</h1></div>
+      <div class="welcome-note"><h1><%= title %></h1></div>
   
       <div class="cover-pic">
         <img src="./assets/mr_coffee_salle.jpg" alt="large pic" />
