--- a/views/pages/schedules.ejs
+++ b/views/pages/schedules.ejs
@@ -31,6 +31,122 @@
         <% } %>
       </tbody>
     </table>
+    <p></p>
+    <div>
+      <input type="submit" id="clickAddSchedule" value="Add Schedule" />
+    </div>
+    <form
+      class="input-users"
+      id="input-schedules"
+      action="/schedules"
+      method="POST"
+      onsubmit="submitSchedules()"
+    >
+      <h1>Add Schedule</h1>
+      <div>
+        <label>Select User Id *</label>
+        <select name="user_id" required>
+          <option value="0">0</option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+          <option value="7">7</option>
+        </select>
+      </div>
+      <div>
+        <label>Select a Day *</label>
+        <select name="day" required>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+          <option value="7">7</option>
+        </select>
+      </div>
+      <div>
+        <label>Start Time *</label>
+        <select name="start_at" required>
+          <option value="12AM">12AM</option>
+          <option value="1AM">1AM</option>
+          <option value="2AM">2AM</option>
+          <option value="3AM">3AM</option>
+          <option value="4AM">4AM</option>
+          <option value="5AM">5AM</option>
+          <option value="6AM">6AM</option>
+          <option value="7AM">7AM</option>
+          <option value="8AM">8AM</option>
+          <option value="9AM">9AM</option>
+          <option value="10AM">10AM</option>
+          <option value="11AM">11AM</option>
+          <option value="12PM">12PM</option>
+          <option value="1PM">1PM</option>
+          <option value="2PM">2PM</option>
+          <option value="3PM">3PM</option>
+          <option value="4PM">4PM</option>
+          <option value="5PM">5PM</option>
+          <option value="6PM">6PM</option>
+          <option value="7PM">7PM</option>
+          <option value="8PM">8PM</option>
+          <option value="9PM">9PM</option>
+          <option value="10PM">10PM</option>
+          <option value="11PM">11PM</option>
+        </select>
+      </div>
+      <div>
+        <label>End Time *</label>
+        <select name="end_at" required>
+          <option value="12AM">12AM</option>
+          <option value="1AM">1AM</option>
+          <option value="2AM">2AM</option>
+          <option value="3AM">3AM</option>
+          <option value="4AM">4AM</option>
+          <option value="5AM">5AM</option>
+          <option value="6AM">6AM</option>
+          <option value="7AM">7AM</option>
+          <option value="8AM">8AM</option>
+          <option value="9AM">9AM</option>
+          <option value="10AM">10AM</option>
+          <option value="11AM">11AM</option>
+          <option value="12PM">12PM</option>
+          <option value="1PM">1PM</option>
+          <option value="2PM">2PM</option>
+          <option value="3PM">3PM</option>
+          <option value="4PM">4PM</option>
+          <option value="5PM">5PM</option>
+          <option value="6PM">6PM</option>
+          <option value="7PM">7PM</option>
+          <option value="8PM">8PM</option>
+          <option value="9PM">9PM</option>
+          <option value="10PM">10PM</option>
+          <option value="11PM">11PM</option>
+        </select>
+      </div>
+      <input type="submit" value="Submit" />
+    </form>
     <%- include('../partials/footer.ejs') %>
+    <script>
+      const footerclass = document.querySelector("footer");
+      footerclass.className = "absolutefooter";
+      function changeDisplay() {
+        document.getElementById("input-schedules").style.display = "block";
+        document.getElementById("clickAddSchedule").style.display = "none";
+        footerclass.className = "absolutefooter";
+      }
+
+      function submitSchedules() {
+        document.getElementById("input-schedules").style.display = "none";
+        document.getElementById("clickAddSchedule").style.display = "block";
+        footerclass.className = "absolutefooter";
+      }
+
+      document
+        .getElementById("clickAddSchedule")
+        .addEventListener("click", changeDisplay);
+    </script>
   </body>
 </html>
