--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,9 +8,8 @@
           alt="Logo"
         />
       </li>
-      <li class="navitem"><a href="/">Home</a></li>
       <li class="navitem"><a href="/users">Users</a></li>
-      <li class="navitem"><a href="/schedules">Schedules</a></li>
+      <li class="navitem"><a href="/">Schedules</a></li>
     </ul>
   </nav>
 </header>
